--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "learn-react",
   "version": "0.0.0",
   "description": "",
-  "repository" : { 
-    "type" : "git",
-    "url" : "https://github.com/oskarradon/learn-react.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/oskarradon/learn-react.git"
   },
   "main": "webpack.config.js",
   "dependencies": {
@@ -18,6 +18,7 @@
     "babel-preset-stage-0": "^6.3.13",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-router": "^2.6.1",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1"
   },
