--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
+    "eslint": "^3.3.1",
+    "eslint-config-standard": "^6.0.0-beta.3",
+    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-react": "^6.1.2",
+    "eslint-plugin-standard": "^2.0.0",
     "webpack-dashboard": "^0.1.6"
   },
   "scripts": {
